project/backend/manifests/deployment-imagesync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hy-kube-project
  name: backend-imagesync-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-imagesync
  template:
    metadata:
      labels:
        app: backend-imagesync
    spec:
      volumes:
        - name: project-volume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: hy-kube-backend-imagesync
          image: IMAGE_BACKEND_IMAGESYNC
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "100m"
              memory: "50Mi"
          volumeMounts:
            - name: project-volume
              mountPath: /usr/app/files
