project/backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hy-kube-project
  name: backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: hy-kube-backend
          image: IMAGE_BACKEND
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "200m"
              memory: "50Mi"
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /healthx
              port: 80
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /healthx
              port: 80
