project/backend/manifests/postgres-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: hy-kube-project
  name: postgres-ss
spec:
  serviceName: project-db
  replicas: 1
  selector:
    matchLabels:
      app: project-db
  template:
    metadata:
      labels:
        app: project-db
    spec:
      containers:
        - name: postgres
          image: postgres:14.3
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
