project/backend/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-db-svc
  namespace: hy-kube-project
  labels:
    app: project-db
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: project-db
