project/backend/manifests/service-imagesync.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hy-kube-project
  name: backend-imagesync-svc
spec:
  type: NodePort
  selector:
    app: backend-imagesync
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
