project/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hy-kube-backend-svc
spec:
  type: NodePort
  selector:
    app: hy-kube-backend
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
